--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
 body {
   background-color: lightblue;
-  margin-right: 4rem;
-  margin-left: 4rem;
-  padding-top: 4rem;
-  margin-bottom: 5rem;
+  margin: 2rem;
+  padding: 2rem;
 }
 section {
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
 }
